fixed navbar flex wrapping (despite not needing too)
This fixes issue #97

--- a/tcf_website/static/base/navbar.css
+++ b/tcf_website/static/base/navbar.css
@@ -4,6 +4,10 @@
     another, making components more maliable and maintainable.
 */
 
+.navbar {
+    flex-wrap: nowrap;
+}
+
 .tCF {
     display: flex;
     flex-direction: row;
